Mollie Gateway for SimpleCart v1.3.0-pl
----------------------------------------------
Released on 2019-11-13

- Allow incoming webhooks to trigger order processing (with SimpleCart 2.8.0)

Mollie Gateway for SimpleCart v1.2.4-pl
----------------------------------------------
Released on 2019-11-13

- Update description to include the order number (update to SimpleCart 2.7)

Mollie Gateway for SimpleCart v1.2.3-pl
---------------------------------------
Released on February 27, 2019

- Make sure a cancelled/failed transaction is no longer marked as waiting for an asynchronous verification

Mollie Gateway for SimpleCart v1.2.2-pl
---------------------------------------
Released on February 4, 2019

- Mark transactions via Mollie as asynchronous to make sure the "Payment is pending" view is shown when returning from the hosted payment page before the webhook was sent. [S19335]
- Log error conditions in the webhook to the MODX error log [#3]

Mollie Gateway for SimpleCart v1.2.1-pl
---------------------------------------
Released on January 20, 2016

- Fix generation of webhookUrl value on sites in subdirectories [S7724]

Mollie Gateway for SimpleCart v1.2.0-pl
---------------------------------------
Released on January 20, 2016

- Include MIT license in package
- Only allow payment methods if the cart total falls within the Mollie minimum and maximum amounts [#1]

Mollie Gateway for SimpleCart v1.1.4-pl
---------------------------------------
Released on November 2, 2015

- Fix typos and grammar in several lexicon entries
- Fix issue where new gateways are not shown properly until a matching lexicon is added
- Add lexicon entries for Belfius and Direct Debit gateways
- Make sure errors from instantiating and submitting the gateway are logged properly

Mollie Gateway for SimpleCart v1.1.3-pl
---------------------------------------
Released on August 21, 2015

- Make sure mollie gateway continues sending the proper description even with SimpleCart 2.3.0-rc5 or up
