@@ -1,3 +1,5 @@
+- Improve webhook handling (with SimpleCart v2.8.0-rc2 or up!)
+
 Mollie Gateway for SimpleCart v1.3.0-pl
 ----------------------------------------------
 Released on 2019-11-13
